fix: book-appointment-btn z-index

--- a/css/style.css
+++ b/css/style.css
@@ -6042,6 +6042,7 @@ body.admin-bar .header-menu-area.sticky_menu {
   align-items: center !important;
   margin-right: 60px;
   height: 100% !important;
+  z-index: 10;
 }
 .book-appointment-btn .appointment-btn {
   background: #111821;
