--- a/sass/modules/_counter-area.scss
+++ b/sass/modules/_counter-area.scss
@@ -121,6 +121,7 @@
     align-items: center !important;
     margin-right: 60px;
     height: 100% !important;
+    z-index: 10;
     .appointment-btn {
         background: $black;
         padding: 15px 20px;
